Add ansible_managed headers to generated config files.

--- a/templates/fpm-init.j2
+++ b/templates/fpm-init.j2
@@ -1,4 +1,7 @@
 #!/bin/sh
+
+# {{ ansible_managed }}
+
 ### BEGIN INIT INFO
 # Provides:          php-fpm {{ php_fpm_daemon }}
 # Required-Start:    $remote_fs $network
