--- a/templates/opcache.ini.j2
+++ b/templates/opcache.ini.j2
@@ -1,3 +1,5 @@
+; {{ ansible_managed }}
+
 zend_extension={{ php_opcache_zend_extension }}
 opcache.enable={{ php_opcache_enable }}
 opcache.enable_cli={{ php_opcache_enable_cli }}
